tests/bad_programs/type_errors/redecl_var_param.notc
int fun(int n) {
    int n;
}

int main() {
    return fun();
}
